test/invalid-semantic/56311_initializer_wrong_type/initializer_wrong_type.agu
-- Author: tcomp56311, João Vedor

-- Semantic Problem

let arr : Int[] = new Int[5|true]

-- Error: Initializer must be Int, not Bool